--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-link-rest": "^0.9.0-rc.1",
     "graphql": "^16.2.0",
     "graphql-anywhere": "^4.2.7",
+    "memoize-one": "^6.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
